<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/textDefaultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textHomeTitle"
            android:textSize="36sp"
            android:layout_weight="1" />

        <TextView
            android:text="@string/textDefaultId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textHomeID"
            android:layout_weight="1"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/textHomeDistanceTitle"
                android:layout_marginBottom="-5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textHomeDistanceTitle"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/textDefaultValue"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHomeDistanceValue"
                    android:textSize="28sp" />

                <TextView
                    android:text="@string/textHomeDistanceUnit"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHomeDistanceUnit" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/textHomeTimeTitle"
                android:layout_marginBottom="-5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textHomeTimeTitle"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/textDefaultTime"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHomeTimeValue"
                    android:textSize="28sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/textHomeAltitudeDiffTitle"
                android:layout_marginBottom="-5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textHomeAltitudeDiffTitle"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/textDefaultValue"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHomeAltitudeDiffValue"
                    android:textSize="28sp" />

                <TextView
                    android:text="@string/textHomeAltitudeDiffUnit"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHomeAltitudeDiffUnit"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>